Startup crash in versioning for some users after bc3139d792 Eevee DOF Unification #64775

Closed
opened 2019-05-17 21:56:29 +02:00 by Gavin Scott · 12 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17

Blender Version
Broken: version: 2.80 (sub 69), branch: master (modified), commit date: 2019-05-17 17:00, hash: be5fd9c09f
Worked: Reportedly builds prior to current buildbot.

Short description of error
Blender crashes on startup in versioning code.

Reported by two people in https://blender.chat/channel/support and I reproduced it here using the supplied .blend

User supplied startup.blend: https://dropbox.com/s/z5hovcne4ue2gfq/startup.blend?dl=0

Exact steps for others to reproduce the error
Using this user-supplied startup.blend will result in a crash on startup. You can simply try opening the file as a normal .blend and it will also crash, so you don't need to put it in place as the actual startup file.

Abort location below. The scene data structure does not look valid and the cam_ob->type reference faults.

    /* Unify DOF settings (EEVEE part only) */
    if (!DNA_struct_elem_find(fd->filesdna, "Camera", "CameraDOFSettings", "dof")) {
      const int SCE_EEVEE_DOF_ENABLED = (1 << 7);
      LISTBASE_FOREACH (Scene *, scene, &bmain->scenes) {
        if (STREQ(scene->r.engine, RE_engine_id_BLENDER_EEVEE)) {
          if (scene->eevee.flag & SCE_EEVEE_DOF_ENABLED) {
            Object *cam_ob = scene->camera;
-->         if (cam_ob && cam_ob->type == OB_CAMERA) {
              Camera *cam = cam_ob->data;
              cam->dof.flag |= CAM_DOF_ENABLED;
            }
          }
        }
      }

Likely related to: https://developer.blender.org/rBbc3139d79226896cf6c2b0813a1188eda70fad09

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17 **Blender Version** Broken: version: 2.80 (sub 69), branch: master (modified), commit date: 2019-05-17 17:00, hash: `be5fd9c09f` Worked: Reportedly builds prior to current buildbot. **Short description of error** Blender crashes on startup in versioning code. Reported by two people in https://blender.chat/channel/support and I reproduced it here using the supplied .blend User supplied startup.blend: https://dropbox.com/s/z5hovcne4ue2gfq/startup.blend?dl=0 **Exact steps for others to reproduce the error** Using this user-supplied startup.blend will result in a crash on startup. You can simply try opening the file as a normal .blend and it will also crash, so you don't need to put it in place as the actual startup file. Abort location below. The scene data structure does not look valid and the cam_ob->type reference faults. ``` /* Unify DOF settings (EEVEE part only) */ if (!DNA_struct_elem_find(fd->filesdna, "Camera", "CameraDOFSettings", "dof")) { const int SCE_EEVEE_DOF_ENABLED = (1 << 7); LISTBASE_FOREACH (Scene *, scene, &bmain->scenes) { if (STREQ(scene->r.engine, RE_engine_id_BLENDER_EEVEE)) { if (scene->eevee.flag & SCE_EEVEE_DOF_ENABLED) { Object *cam_ob = scene->camera; --> if (cam_ob && cam_ob->type == OB_CAMERA) { Camera *cam = cam_ob->data; cam->dof.flag |= CAM_DOF_ENABLED; } } } } ``` Likely related to: https://developer.blender.org/rBbc3139d79226896cf6c2b0813a1188eda70fad09
Author

Added subscriber: @GavinScott

Added subscriber: @GavinScott

Added subscriber: @heavypoly

Added subscriber: @heavypoly

Not sure if this matters, the submitted startup.blend camera properties use

bpy.context.object.data.dof_gpu.fstop (I think)
bpy.context.object.data.dof_gpu.blades
bpy.context.object.data.dof_gpu.focus_distance

vs the new properties:

bpy.context.object.data.dof.aperture_fstop
bpy.context.object.data.dof.aperture_blades
bpy.context.object.data.dof.focus_distance

Not sure if this matters, the submitted startup.blend camera properties use bpy.context.object.data.dof_gpu.fstop (I think) bpy.context.object.data.dof_gpu.blades bpy.context.object.data.dof_gpu.focus_distance vs the new properties: bpy.context.object.data.dof.aperture_fstop bpy.context.object.data.dof.aperture_blades bpy.context.object.data.dof.focus_distance

Added subscriber: @brecht

Added subscriber: @brecht

The link to the startup.blend is dead? I have an idea what might be causing it though.

The link to the startup.blend is dead? I have an idea what might be causing it though.

This issue was referenced by 728d99f446

This issue was referenced by 728d99f44683c78bffa5be8b109bb05f99828617

In #64775#681693, @brecht wrote:
The link to the startup.blend is dead? I have an idea what might be causing it though.

Sorry, here it is: https://www.dropbox.com/s/e3x6h5h3awicaig/startup.blend?dl=0

> In #64775#681693, @brecht wrote: > The link to the startup.blend is dead? I have an idea what might be causing it though. Sorry, here it is: https://www.dropbox.com/s/e3x6h5h3awicaig/startup.blend?dl=0
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

For future reference, when you have files, you can just drag them into the text area and they will be uploaded and attached to the bug report, no need to host them on other sites.

For future reference, when you have files, you can just drag them into the text area and they will be uploaded and attached to the bug report, no need to host them on other sites.

startup.blend Ok, thanks

[startup.blend](https://archive.blender.org/developer/F7044215/startup.blend) Ok, thanks

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 572754f894

This issue was referenced by 572754f894cef9497aeab156e00e99a1a9f1fcd9
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64775
No description provided.