Fix T64775: crash loading Eevee files with DoF, after recent changes

Additional fix to ensure Cycles versioning is done after Eevee.